--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+/* ======Google Font Family====== */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200;300;500;600;700&family=Poppins:wght@200;300;500;600;700&display=swap');
+@import url('https://cdn.linearicons.com/free/1.0.0/icon-font.min.css');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Noto Serif TC', serif; */
+    /* font-family: 'DFKai-SB'; */
+}
