--- a/src/app/components/case-create/case-create.component.css
+++ b/src/app/components/case-create/case-create.component.css
@@ -1,7 +1,7 @@
-.row.gx-4 {
+/* .row.gx-4 {
     background-color: burlywood;
-}
+} */
 
-.rounded {
+/* .rounded {
     background-color: palegreen;
-}
+} */
